tests/ui/include-wrong-path.goml
include: "whatever-land/yup-yup.goml" //~ ERROR: File `whatever-land/yup-yup.goml`
